keep track of which elements get updated so you can remove by selector

--- a/test/index.html
+++ b/test/index.html
@@ -185,6 +185,8 @@
       <li><abbr id="testMillisSettings8" class="tomillis" title="90"></abbr> [90 sec]</li>
       <li><abbr id="testMillisSettings9" class="tomillis" title="120"></abbr> [120 sec]</li>
     </ul>
+    
+    <h2>TODO: Refresh</h2>
   </div>
 
   <script src="test_helpers.js" type="text/javascript"></script>
@@ -509,6 +511,8 @@
         ok($("#testNumbersSettings2").html().match(/^nine minutes/), "Settings correctly applied");
         ok($("#testNumbersSettings3").html().match(/^10 minutes/), "Settings correctly applied");
       });
+      
+      // TODO: Tests for starting and stopping automatic refresh
     })(jQuery);
     //]]>
   </script>
